I2PSnark: Fix text alignment issues.
Monotone-Parent: 372456f0633e5446f4d3c1ae6bc70f78da6f74d8
Monotone-Revision: b4b0bb3a270987b61e10ded90dee9540a2f24961

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-17T08:00:09
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -129,6 +129,11 @@ td:first-child {
      font-size: 8pt;
 }
 
+.snarkTorrentStatus {
+     text-align: center !important;
+	 font-style: italic;
+}
+
 .snarkTorrentOdd {
      background: #444;
      font-size: 8pt;
@@ -137,6 +142,7 @@ td:first-child {
 .snarkFileName {
      min-width: 25em;
      padding: 4px 10px;
+	 text-align: left !important;
 }
 
 .snarkFileSize {
@@ -145,6 +151,8 @@ td:first-child {
 
 .snarkFileStatus {
      padding: 4px 10px;
+	 text-align: center;
+	 font-style: italic;
 }
 
 .thumb {
