I2PSnark: UI/theme tweaks.
Monotone-Parent: a8d17701a50c6cb874ae2c8c9e3c247a2dcb6809
Monotone-Revision: f559e0e588ceea2851093fd963cc21d56c26ab07

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-18T07:10:43
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -462,10 +462,11 @@ div.configsection a:hover {
 }
 
 code {
-     font-size: 9.5pt;
-     color: #0f0;
+     font-size: 9pt;
+     color: #b8b;
 	 padding: 0 2px;
 	 font-weight: bold;
+	 font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
 }
 .snarknavbar {
      margin: 0 0 10px 0 !important;
