I2PSnark: space savings!
Monotone-Parent: 9479c7419c00c08698cca4a09e6fb37d8e0f2c33
Monotone-Revision: abe7962ebcfc3af06a0cfd1ff7d9efdd8f8de655

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-18T16:19:51
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -148,10 +148,12 @@ td:first-child {
 
 .snarkTorrentName {
      text-shadow:1px 1px #550000;
+	 padding: 2px 0 0;
 }
 
 .snarkTorrentAction {
      text-shadow:1px 1px #550000;
+	 padding: 0 0 1px;
 }
 
 .snarkTorrentEven {
@@ -160,7 +162,8 @@ td:first-child {
 }
 
 .snarkTorrentStatus {
-     line-height: 200%;
+/*     line-height: 100%; */
+     padding: 1px 0 2px;
 }
 
 .snarkTorrentStatus:first-child {
@@ -364,7 +367,7 @@ textarea {
 
 img {
      border: none;
-     margin: 3px 8px 5px 4px;
+     margin: 1px 3px 3px 4px;
      vertical-align: middle;
      opacity: 1.0;
      line-height: 100%;
