--- a/installer/resources/themes/console/snark/snark.css
+++ b/installer/resources/themes/console/snark/snark.css
@@ -2,7 +2,7 @@
 /* Guantanamo Commemorative Edition. */
 
 body {
-     background: #333 url('../console/images/graytile.png');
+     background: #333 url('/themes/console/snark/images/graytile.png');
      color: #001;
      font: 8pt "Lucida Sans Unicode","Bitstream Vera Sans",Verdana,Tahoma,Helvetica,sans-serif;
 }
@@ -28,7 +28,7 @@ body {
 .snarkRefresh:hover {
      text-decoration: none !important;
      text-transform: uppercase !important;
-     padding: 0 16px;
+     padding: 1px 16px;
      letter-spacing: 0.05em;
      font-weight: bold;
      font-size: 11pt;
@@ -36,7 +36,7 @@ body {
      /*border-bottom: 3px solid #111;
      border-top: 3px solid #111;*/
 	 background: #f90;
-     background: #111 url('../console/images/snarknav_on.png') repeat-x scroll center center;
+     background: #111 url('/themes/console/snark/images/snarknav_on.png') repeat-x scroll center center;
 	 -moz-border-radius: 3px;
 	 -khtml-border-radius: 3px;
 	 border-radius: 3px;
@@ -52,7 +52,7 @@ body {
      color: #fb0;
      /*border-bottom: 3px solid #6d6;
      border-top: 3px solid #6d6; */
-     background: #111 url('../console/images/snarknav_on.png') repeat-x scroll center center;
+     background: #111 url('/themes/console/snark/images/snarknav_on.png') repeat-x scroll center center;
 }
 
 .snarkMessages {
@@ -70,7 +70,7 @@ body {
      height: 70px;
      width: auto;
      background: #000;
-     background: #111 url('../console/images/hat.png') no-repeat scroll right center;
+     background: #111 url('/themes/console/snark/images/hat.png') no-repeat scroll right center;
 
 }
 
@@ -97,7 +97,7 @@ table {
 
 thead, tfoot {
      background: #000;
-	 background: url("../console/images/snark_thead.png") repeat-x scroll 0 0 #101;
+	 background: url("/themes/console/snark/images/snark_thead.png") repeat-x scroll 0 0 #101;
 	 text-shadow:0 2px 5px #333333;
 }
 
@@ -123,6 +123,7 @@ th {
 th:first-child {
      text-align: left;
 	 padding-left: 10px;
+	 max-width: 120px;
 }
 
 .SnarkTorrents {
@@ -227,7 +228,7 @@ td:first-child {
 	 border-radius: 0 0 5px 5px;
 	 border-top: 0;
 	 text-shadow: 0px 3px 5px #333;
-	 background: #333 url('../console/images/snarknav.png') repeat-x scroll center center !important;
+	 background: #333 url('/themes/console/snark/images/snarknav.png') repeat-x scroll center center !important;
 	 font-variant: small-caps !important;
 }
 
@@ -301,13 +302,13 @@ input {
      -khtml-border-radius: 4px;
      border-radius: 4px;
      border: 1px inset #000;
-     background: url('../console/images/graytile.png');	 
+     background: url('/themes/console/snark/images/graytile.png');	 
 	 color: #f60;
 }
 
 input.r {
      text-align: right;
-     background: url('../console/images/graytile.png');
+     background: url('/themes/console/snark/images/graytile.png');
 }
 
 input[type=submit] {
@@ -338,7 +339,7 @@ input[type=text]:active, input[type=text]:hover, input.r:hover {
 
 select {
      background: #333;
-	 background: url('../console/images/graytile.png') !important;
+	 background: url('/themes/console/snark/images/graytile.png') !important;
      color: #f60;
      font: 9pt "Lucida Sans Unicode","Bitstream Vera Sans",Verdana,Tahoma,Helvetica,sans-serif;
      font-weight: bold;
@@ -355,7 +356,7 @@ select:hover, textarea:hover {
 }	 
 
 textarea {
-     background: #111 url('../console/images/graytile.png');
+     background: #111 url('/themes/console/snark/images/graytile.png');
      color: #f60;
      font-weight: bold;
      padding: 1px 4px 0px;
@@ -408,7 +409,7 @@ div.newtorrentsection {
      -khtml-box-shadow: inset 0px 0px 1px 0px #101;
      box-shadow: inset 0px 0px 1px 0px #101;
      word-wrap: break-word;
-     background: #545 url('../console/images/snark_create.png') no-repeat scroll right center;
+     background: #545 url('/themes/console/snark/images/snark_create.png') no-repeat scroll right center;
      opacity: 1.0;
 }
 
@@ -425,7 +426,7 @@ div.addtorrentsection {
      -khtml-box-shadow: inset 0px 0px 1px 0px #101;
      box-shadow: inset 0px 0px 1px 0px #101;
      word-wrap: break-word;
-     background: #545 url('../console/images/snark_add.png') no-repeat scroll right center;
+     background: #545 url('/themes/console/snark/images/snark_add.png') no-repeat scroll right center;
      opacity: 1.0;
 }
 
@@ -473,7 +474,7 @@ code {
 }
 .snarknavbar {
      margin: 0 0 10px 0 !important;
-     padding: 2px 10px;
+     padding: 4px 10px 4px;
      border: 1px solid #001;
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
@@ -481,11 +482,18 @@ code {
      -moz-box-shadow: inset 0px 0px 1px 0px #002;
      -khtml-box-shadow: inset 0px 0px 1px 0px #002;
      box-shadow: inset 0px 0px 1px 0px #002;
-     background: #111 url('../console/images/snarknav.png') repeat-x scroll center center;
+     background: #111 url('/themes/console/snark/images/snarknav.png') repeat-x scroll center center;
      text-transform: uppercase !important;
      letter-spacing: 0.05em;
      font-weight: bold;
-     font-size: 11pt;
+     font-size: 11.5pt;
      color: #001;
 	 min-width: 820px;
  }
+
+ .snarknavbar img {
+     border: 0;
+	 margin: 0 -2px 0 -3px;
+     padding: 1px 0 0px !important;
+	 vertical-align: top;
+}
