--- a/installer/resources/themes/console/snark/snark.css
+++ b/installer/resources/themes/console/snark/snark.css
@@ -122,8 +122,16 @@ th {
 
 th:first-child {
      text-align: left;
-	 padding-left: 5px;
+	 padding-left: 3px;
 	 max-width: 120px;
+}
+
+th:first-child img {
+     margin: 1px 2px 3px 1px;
+}
+
+th:nth-child(2) img {
+     margin: 1px 7px 3px 2px;
 }
 
 .SnarkTorrents {
@@ -170,7 +178,7 @@ td:first-child {
 .snarkTorrentStatus:first-child {
      text-align: left !important;
 	 font-style: italic;
-	 padding-left: 10px;
+	 padding-left: 8px;
 }
 
 .snarkTorrentRate, .snarkTorrentDownloaded, .snarkTorrentUploaded {
