I2PSnark: Invert show/hide peer icon functionality, tooltip change to "toggle peers"; fix alignment of "No torrents loaded" message with new css class; Replace brackets on Totals with &raquo;.
Monotone-Parent: b8431e43fc45bfce2208ddf7cfd78ba6e0c4d0cf
Monotone-Revision: 361d2bfa6554a2564f4d1732ceed44ce05f1d1b2

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-20T11:26:28
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark/snark.css
+++ b/installer/resources/themes/console/snark/snark.css
@@ -2,7 +2,7 @@
 /* Guantanamo Commemorative Edition. */
 
 body {
-     background: #333 url('/themes/console/snark/images/graytile.png');
+     background: #101 url('/themes/console/snark/images/graytile.png');
      color: #001;
      font: 8pt "Lucida Sans Unicode","Bitstream Vera Sans",Verdana,Tahoma,Helvetica,sans-serif;
 }
@@ -165,6 +165,14 @@ td:first-child {
 .snarkTorrentEven {
      background: #545;
      font-size: 8pt;
+}
+
+.snarkTorrentNoneLoaded {
+     background: #323;
+     font-size: 8.5pt;
+	 font-weight: bold;
+	 text-align: center !important;
+	 color: #bbb !important;
 }
 
 .snarkTorrentStatus {
