I2PSnark: Configuration section tweaks.
Monotone-Parent: 361d2bfa6554a2564f4d1732ceed44ce05f1d1b2
Monotone-Revision: a868059414496c1f8eaab7567c1aac243ae392c7

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-20T18:41:49
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark/snark.css
+++ b/installer/resources/themes/console/snark/snark.css
@@ -458,6 +458,23 @@ div.configsection {
      font-weight: bold;
 }
 
+div.configsectionpanel {
+     margin: 0 0 10px 0;
+     padding: 0 10px;
+     border: 1px solid #000;
+     color: #ddd;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
+     -moz-box-shadow: inset 0px 0px 1px 0px #101;
+     -khtml-box-shadow: inset 0px 0px 1px 0px #101;
+     box-shadow: inset 0px 0px 1px 0px #101;
+     word-wrap: break-word;
+     text-align: center;
+     background: #545 url('/themes/console/snark/images/configuration.png') no-repeat scroll right center;
+     font-weight: bold;
+}
+
 .newtorrentsection form, .configsection form, .addtorrentsection form {
      color: #ddd !important;
 }
