I2PSnark: Kludge to fix extraneous space under message log on config page.
Monotone-Parent: a868059414496c1f8eaab7567c1aac243ae392c7
Monotone-Revision: b814a31868117149f00b40fd6f01208fe202b383

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-20T21:07:27
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark/snark.css
+++ b/installer/resources/themes/console/snark/snark.css
@@ -67,6 +67,10 @@ body {
      background: #111 url('/themes/console/snark/images/hat.png') no-repeat scroll right center;
 }
 
+.logshim {
+     margin-top: -10px !important;
+}
+
 pre {
      width: 100%;
      font: 8pt "Lucida Console","DejaVu Sans Mono",Courier,mono !important;
