--- a/installer/resources/themes/console/snark/snark.css
+++ b/installer/resources/themes/console/snark/snark.css
@@ -203,8 +203,8 @@ td:first-child {
 }
 
 .snarkFileName {
-     min-width: 25em;
-     padding: 4px 10px;
+/*     min-width: 25em;*/
+     padding: 4px 0px !important; 
 	 text-align: left !important;
 }
 
