--- a/installer/resources/themes/console/snark/snark.css
+++ b/installer/resources/themes/console/snark/snark.css
@@ -1,4 +1,4 @@
-/* I2PSnark theme "faze to gray" by dr|z3d */
+/* I2PSnark theme "Ubergine" by dr|z3d */
 /* Guantanamo Commemorative Edition. */
 
 body {
@@ -168,7 +168,19 @@ td:first-child {
 
 .snarkTorrentAction {
      text-shadow:1px 1px #550000;
-	 padding: 0 0 1px;
+	 padding: 1px 0 !important;
+	 margin: 0 !important;
+	 text-align: center;
+}
+
+.snarkTorrentAction img {
+     margin: 0 2px !important;
+	 opacity: 0.6;
+}
+
+.snarkTorrentAction img:hover {
+     -moz-box-shadow: 0 0 1px 1px #f90;
+     opacity: 1;
 }
 
 .snarkTorrentEven {
@@ -202,9 +214,9 @@ td:first-child {
 .snarkTorrentOdd {
      background: #656;
      font-size: 8pt;
-	 border: 1px inset #434;
-	 border-left: 0;
-	 border-right: 0;
+	 border: 1px inset #434 !important;
+	 border-left: 0 !important;
+	 border-right: 0 !important;
 }
 
 .snarkFileName {
@@ -259,7 +271,7 @@ td:first-child {
 }
 
 .page {
-     background: #323;
+     background: #323 url('/themes/console/snark/images/tile2.png');
      color: #310;
      min-width: 820px !important;
      margin: 5px 0 0 0;
@@ -270,11 +282,11 @@ td:first-child {
      border: 1px solid #101;
      font-size: 9pt !important;
      line-height: 160% !important;
-     -moz-box-shadow: inset 0px 0px 1px 0px #002;
+     -moz-box-shadow: inset 0px 0px 1px 0px #212;
      -khtml-box-shadow: inset 0px 0px 1px 0px #002;
      box-shadow: inset 0px 0px 1px 0px #002;
      text-align: center;
-     opacity: 1
+     opacity: 1;
 }
 
 form {
