I2PSnark: Activity icons refresh.
Monotone-Parent: 2fb07af8bc36b275d94afffdaa1dcf87148525f1
Monotone-Revision: bab5c482312d1b4538158e0c39cb337dddffdb87

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-27T06:34:54
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark/snark.css
+++ b/installer/resources/themes/console/snark/snark.css
@@ -170,9 +170,10 @@ td:first-child {
 
 .snarkTorrentAction {
      text-shadow:1px 1px #550000;
-	 padding: 1px 0 !important;
+	 padding: 1px 1px 1px 1px !important;
 	 margin: 0 !important;
 	 text-align: center;
+	 width: 68px;
 }
 
 .snarkTorrentAction img {
