--- a/installer/resources/themes/snark/snark.css
+++ b/installer/resources/themes/snark/snark.css
@@ -2,7 +2,7 @@
 /* Guantanamo Commemorative Edition. */
 
 body {
-     background: #101 url('/themes/console/snark/images/graytile.png');
+     background: #101 url('/themes/snark/ubergine/images/graytile.png');
      color: #001;
      font: 8pt "Lucida Sans Unicode","Bitstream Vera Sans",Verdana,Tahoma,Helvetica,sans-serif;
 }
@@ -23,8 +23,8 @@ body {
      font-size: 11pt;
      color: #f70;
 	 text-shadow: 1px 1px #420;
-     background: url('/themes/console/snark/images/snarknav_lowlight.png') no-repeat scroll center bottom;
-     background: #310 url('/themes/console/snark/images/snarknav_lowlight.png') repeat-x scroll center center;
+     background: url('/themes/snark/ubergine/images/snarknav_lowlight.png') no-repeat scroll center bottom;
+     background: #310 url('/themes/snark/ubergine/images/snarknav_on.png') repeat-x scroll center center;
 	 -moz-border-radius: 0px;
 	 -khtml-border-radius: 3px;
 	 border-radius: 0px;
@@ -42,8 +42,8 @@ body {
      font-weight: bold;
      font-size: 11pt;
      color: #f50;
-     background: #310 url('/themes/console/snark/images/snarknav_on.png') repeat-x scroll center center;
-     background: url('/themes/console/snark/images/snarknav_on.png') repeat-x scroll center center;
+     background: #310 url('/themes/snark/ubergine/images/snarknav_on.png') repeat-x scroll center center;
+     background: url('/themes/snark/ubergine/images/snarknav_lowlight.png') repeat-x scroll center center;
 	 -moz-border-radius: 0;
 	 -khtml-border-radius: 0;
 	 border-radius: 0;
@@ -60,25 +60,25 @@ body {
      font-weight: bold;
      font-size: 11pt;
      color: #fb0;
-     background: #310 url('/themes/console/snark/images/snarknav_on.png') repeat-x scroll center center;
-}
-
-.snarkRefresh:first-child {
-	 -moz-border-radius: 0px 0 0 3px;
-	 -khtml-border-radius: 3px;
-	 border-radius: 0;
-	 -moz-box-shadow: inset 0 0 1px 0 #f90;
-	 -khtml-box-shadow: inset 0 0 1px 0 #f90;
-	 box-shadow: 0 0 1px 0  #f90;
+     background: #310 url('/themes/snark/ubergine/images/snarknav_on.png') repeat-x scroll center center;
 }
 
 .snarkRefresh:last-child {
-	 -moz-border-radius: 0 3px 0px 0px;
+	 -moz-border-radius: 0 3px 3px 0px;
 	 -khtml-border-radius: 0 3px 0 0;
 	 border-radius: 0;
 	 -moz-box-shadow: inset 0 0 1px 0 #f90;
 	 -khtml-box-shadow: inset 0 0 1px 0 #f90;
 	 box-shadow: 0 0 1px 0 #f90;
+}
+
+.snarkRefresh:first-child {
+	 -moz-border-radius: 3px 0 0 3px;
+	 -khtml-border-radius: 3px;
+	 border-radius: 0;
+	 -moz-box-shadow: inset 0 0 1px 0 #f90;
+	 -khtml-box-shadow: inset 0 0 1px 0 #f90;
+	 box-shadow: 0 0 1px 0  #f90;
 }
 
 .snarkMessages {
@@ -95,7 +95,7 @@ body {
      color: #22f;
      height: 70px;
      width: auto;
-     background: #111 url('/themes/console/snark/images/hat.png') no-repeat scroll right center;
+     background: #101 url('/themes/snark/ubergine/images/hat.png') no-repeat scroll right center;
 }
 
 .logshim {
@@ -108,7 +108,7 @@ pre {
      padding: 0;
      text-align: left !important;
      height: 8px;
-	 color: #070;
+	 color: #51a;
      font-weight: bold !important; 
 }
 
@@ -118,7 +118,7 @@ table {
      padding: 0px;
      border-spacing: 0px;
      border-collapse: collapse;
-	 color: #323 url("/themes/console/snark/images/hat.png");
+	 color: #323 url("/themes/snark/ubergine/images/hat.png");
 	 width: 100%;
 	 opacity: 1 !important;
 }
@@ -128,7 +128,7 @@ tr {
 }
 
 thead, tfoot {
-	 background: url("/themes/console/snark/images/snark_thead.png") repeat-x scroll 0 0 #101;
+	 background: url("/themes/snark/ubergine/images/snark_thead.png") repeat-x scroll 0 0 #101;
 	 text-shadow:0 2px 5px #333333;
 }
 
@@ -313,7 +313,7 @@ td:first-child {
 	 border-radius: 0 0 5px 5px;
 	 border-top: 0;
 	 text-shadow: 0px 3px 5px #323;
-	 background: #101 url('/themes/console/snark/images/snarknav.png') repeat-x scroll center center !important;
+	 background: #101 url('/themes/snark/ubergine/images/snarknav.png') repeat-x scroll center center !important;
 	 font-variant: small-caps !important;
 }
 
@@ -323,7 +323,7 @@ td:first-child {
 }
 
 .page {
-     background: #323 url('/themes/console/snark/images/tile2.png');
+     background: #323 url('/themes/snark/ubergine/images/tile2.png');
      color: #310;
      min-width: 820px !important;
      margin: 5px 0 0 0;
@@ -386,13 +386,13 @@ input {
      -khtml-border-radius: 4px;
      border-radius: 4px;
      border: 1px inset #000;
-     background: #212 url('/themes/console/snark/images/graytile.png');	 
+     background: #212 url('/themes/snark/ubergine/images/graytile.png');	 
 	 color: #f60;
 }
 
 input.r {
      text-align: right;
-     background: url('/themes/console/snark/images/graytile.png');
+     background: url('/themes/snark/ubergine/images/graytile.png');
 }
 
 input[type=submit] {
@@ -423,7 +423,7 @@ input[type=text]:active, input[type=text]:hover, input.r:hover {
 
 select {
      background: #333;
-	 background: url('/themes/console/snark/images/graytile.png') !important;
+	 background: url('/themes/snark/ubergine/images/graytile.png') !important;
      color: #f60;
      font: 9pt "Lucida Sans Unicode","Bitstream Vera Sans",Verdana,Tahoma,Helvetica,sans-serif;
      font-weight: bold;
@@ -440,7 +440,7 @@ select:hover, textarea:hover {
 }	 
 
 textarea {
-     background: #111 url('/themes/console/snark/images/graytile.png');
+     background: #111 url('/themes/snark/ubergine/images/graytile.png');
      color: #f60;
      font-weight: bold;
      padding: 1px 4px 0px;
@@ -493,7 +493,7 @@ div.newtorrentsection {
      -khtml-box-shadow: inset 0px 0px 1px 0px #101;
      box-shadow: inset 0px 0px 1px 0px #101;
      word-wrap: break-word;
-     background: #545 url('/themes/console/snark/images/snark_create.png') no-repeat scroll right center;
+     background: #545 url('/themes/snark/ubergine/images/snark_create.png') no-repeat scroll right center;
      opacity: 1.0;
 }
 
@@ -510,7 +510,7 @@ div.addtorrentsection {
      -khtml-box-shadow: inset 0px 0px 1px 0px #101;
      box-shadow: inset 0px 0px 1px 0px #101;
      word-wrap: break-word;
-     background: #545 url('/themes/console/snark/images/snark_add.png') no-repeat scroll right center;
+     background: #545 url('/themes/snark/ubergine/images/snark_add.png') no-repeat scroll right center;
      opacity: 1.0;
 }
 
@@ -544,7 +544,7 @@ div.configsectionpanel {
      box-shadow: inset 0px 0px 1px 0px #101;
      word-wrap: break-word;
      text-align: center;
-     background: #545 url('/themes/console/snark/images/configuration.png') no-repeat scroll right center;
+     background: #545 url('/themes/snark/ubergine/images/configuration.png') no-repeat scroll right center;
      font-weight: bold;
 }
 
@@ -575,22 +575,23 @@ code {
 	 font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
 }
 .snarknavbar {
-     margin: 0 0 10px 0 !important;
-     padding: 7px 10px;
-     border: 1px solid #001;
-     -moz-border-radius: 4px;
-     -khtml-border-radius: 4px;
-     border-radius: 4px;
+     margin: -10px 0 5px 0 !important;
+     padding: 9px 10px 10px;
+     border: 1px solid #101;
+     -moz-border-radius: 0 0 8px 8px;
+     -khtml-border-radius: 0 0 4px 4px;
+     border-radius: 0 0 4px 4px;
      -moz-box-shadow: inset 0px 0px 1px 0px #002;
      -khtml-box-shadow: inset 0px 0px 1px 0px #002;
      box-shadow: inset 0px 0px 1px 0px #002;
-     background: #111 url('/themes/console/snark/images/snarknav.png') repeat-x scroll center center;
+     background: #111 url('/themes/snark/ubergine/images/snarktopnav.png') repeat-x scroll center center;
      text-transform: uppercase !important;
      letter-spacing: 0.065em !important;
      font-weight: bold;
      font-size: 11.5pt;
      color: #001;
-	 min-width: 820px;
+	 min-width: 700px;
+	 width: 700px;
 	 text-align: center;
  }
 
