--- a/installer/resources/themes/snark/ubergine/snark.css
+++ b/installer/resources/themes/snark/ubergine/snark.css
@@ -16,7 +16,7 @@ body {
 .snarkRefresh:link,.snarkRefresh:visited {
      text-decoration: none !important;
      text-transform: uppercase !important;
-     padding: 2px 16px 3px !important;
+     padding: 4px 16px 5px !important;
 	 margin: -5px -7px -5px 0 !important;
      letter-spacing: 0.05em;
      font-weight: bold;
@@ -118,7 +118,7 @@ table {
      padding: 0px;
      border-spacing: 0px;
      border-collapse: collapse;
-	 color: #323 url("/themes/snark/ubergine/images/hat.png");
+	 color: #323;
 	 width: 100%;
 	 opacity: 1 !important;
 }
@@ -141,17 +141,19 @@ thead {
 }
 
 th {
-     padding: 4px 2px 1px 4px;
+     padding: 4px 2px 4px 4px;
      font-size: 9pt;
      border-top: 1px outset #001;
      border-bottom: 1px inset #101;
 	 color: #ddd;
      whitespace: nowrap;
+     font-variant: small-caps !important;
+     letter-spacing: 0.05em;
 }
 
 th:first-child {
      text-align: left !important;
-	 padding-left: 3px;
+	 padding-left: 2px;
 	 max-width: 120px;
 }
 
@@ -161,11 +163,11 @@ tfoot td:first-child {
 }
 
 th:first-child img {
-     margin: 1px 2px 3px 1px;
+     margin: 1px 1px 3px 1px !important;
 }
 
 th:nth-child(2) img {
-     margin: 1px 7px 3px 2px;
+     margin: 1px 7px 3px 2px !important;
 }
 
 tfoot th {
@@ -244,14 +246,36 @@ td:first-child {
 
 .snarkTorrentStatus:first-child {
      text-align: left !important;
-	 font-style: italic;
-	 padding-left: 8px;
+     font-style: italic;
+     padding-left: 0px;
+     min-width: 92px;
+     font-weight: bold;
+     font-size: 7pt !important;
+     color: #dd9 !important;
+}
+
+.snarkTorrentStatus:first-child img {
+     margin-right: 0px !important;
 }
 
 .snarkTorrentRate, .snarkTorrentDownloaded, .snarkTorrentUploaded {
      font-size: 8pt;
      font-weight: bold;
+     padding: 0 3px;
 }
+
+.snarkTorrentDownloaded {
+     color: #76a !important;
+}
+
+.snarkTorrentUploaded {
+     color: #b9b !important;
+}
+
+.snarkTorrentRate {
+     color: #d9d !important;
+}
+
 
 .snarkTorrentOdd {
      background: #656;
@@ -325,7 +349,7 @@ td:first-child {
 .page {
      background: #323 url('/themes/snark/ubergine/images/tile2.png');
      color: #310;
-     min-width: 820px !important;
+     min-width: 880px !important;
      margin: 5px 0 0 0;
      padding: 10px 10px 0px 10px;
      -moz-border-radius: 4px;
@@ -447,12 +471,12 @@ textarea {
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      border-radius: 4px;
-	 border: 1px inset #000;
+     border: 1px inset #000;
 }
 
 img {
      border: none;
-     margin: 1px 3px 3px 4px;
+     margin: 0 3px 1px 3px;
      vertical-align: middle;
      opacity: 1.0;
      line-height: 100%;
@@ -460,7 +484,6 @@ img {
 
 img: hover {
      border: none;
-     margin: 5px 5px 0px 5px;
      opacity: 0.5;
      line-height: 100%;
 }
@@ -576,7 +599,7 @@ code {
 }
 .snarknavbar {
      margin: -10px 0 5px 0 !important;
-     padding: 9px 10px 10px;
+     padding: 11px 10px 12px;
      border: 1px solid #101;
      -moz-border-radius: 0 0 8px 8px;
      -khtml-border-radius: 0 0 4px 4px;
@@ -597,7 +620,7 @@ code {
 
  .snarknavbar img {
      border: 0;
-	 margin: 0 -2px 0 -3px;
+     margin: 0 -6px 0 -2px;
      padding: 1px 0 0px !important;
-	 vertical-align: top;
+     vertical-align: top;
 }
