I2PSnark: CSS refinements.
Monotone-Parent: 1da5a6b3f2f42d9ddbe6b0a64e3c27313d61d86a
Monotone-Revision: 9c5d0b4cdfa76234e6ac9fbfd0ce753748104f47

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-01T22:08:05
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/snark/ubergine/snark.css
+++ b/installer/resources/themes/snark/ubergine/snark.css
@@ -92,10 +92,18 @@ body {
      border-radius: 4px 0 0 0;
      border: 1px solid #000;
      overflow: auto;
-     color: #22f;
+     color: #26f;
      height: 70px;
      width: auto;
      background: #101 url('/themes/snark/ubergine/images/hat.png') no-repeat scroll right center;
+}
+
+.snarkMessages a:link {
+     color: #37f !important;
+}
+
+.snarkMessages a:hover {
+     color: #59f !important;
 }
 
 .logshim {
@@ -108,7 +116,7 @@ pre {
      padding: 0;
      text-align: left !important;
      height: 8px;
-	 color: #51a;
+	 color: #13f;
      font-weight: bold !important; 
 }
 
