--- a/installer/resources/themes/snark/ubergine/snark.css
+++ b/installer/resources/themes/snark/ubergine/snark.css
@@ -85,7 +85,7 @@ body {
      font: bold 9pt "Lucida Console","DejaVu Sans Mono",Courier,mono !important;
      text-align: left;
      margin: 0 0 10px 0;
-     padding: 3px 0;
+     padding: 3px 5px;
      border-spacing: 0px;
      -moz-border-radius: 4px 0 0 0;
      -khtml-border-radius: 4px 0 0 0;
