I2PSnark: File manager cleanups.
Monotone-Parent: 6334cbe6b1bab14eb8169359e08b68e6b78dc8c7
Monotone-Revision: 59b1557e6b91f0b043fc3f37ec0cbb96f028163b

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-10T20:56:37
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/snark/ubergine/snark.css
+++ b/installer/resources/themes/snark/ubergine/snark.css
@@ -192,6 +192,10 @@ tfoot th {
      padding: 4px 0;
 }
 
+.priority {
+     font-size: 7pt;
+     vertical-align: center;
+}
 
 .SnarkTorrents {
      margin: 0;
@@ -314,7 +318,8 @@ td:first-child {
 .snarkFileName {
 /*     min-width: 25em;*/
      padding: 4px 0px !important; 
-	 text-align: left !important;
+     text-align: left !important;
+     font-size: 8pt !important;
 }
 
 .snarkFileSize {
@@ -471,8 +476,8 @@ input[type=text]:active, input[type=text]:hover, input.r:hover {
 
 input[type=radio] {
      padding: 2px;
-     color: #f00 !important;
-     margin: 0 5px 0 15px;
+     margin: 0 3px 0 8px;
+     vertical-align: bottom;
 }
 
 select {
