I2PSnark: Main torrent table tidyups and tweaks.
Monotone-Parent: c4c6b3651ccb1c340e0efea76147b914103b94be
Monotone-Revision: ca451f8dc37159bea9e402b33dce2c529a82224f

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-11T01:33:56
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/snark/ubergine/snark.css
+++ b/installer/resources/themes/snark/ubergine/snark.css
@@ -531,11 +531,28 @@ img {
      line-height: 100%;
 }
 
-img: hover {
+img:hover {
      border: none;
-     opacity: 0.5;
+     opacity: 1;
      line-height: 100%;
 }
+
+.infoz {
+     margin: 0 -1px 0 0 !important;
+     padding: 0 !important;
+     lineheight: 100%;
+     float: left;
+}
+
+.infoz img {
+     border: none;
+     opacity: 0.5 !important;
+}
+
+.infoz img:hover {
+     opacity: 1 !important;
+}
+
 
 div.section,div.mainsection {
      margin: 0 0 10px 0;
