--- a/installer/resources/themes/snark/ubergine/snark.css
+++ b/installer/resources/themes/snark/ubergine/snark.css
@@ -474,6 +474,20 @@ input[type=submit]:active {
      text-shadow: 0 !important;
 }
 
+input[type=image] {
+     padding: 0 !important;
+     background: #000;
+     -moz-border-radius: 0px;
+     -khtml-border-radius: 0px;
+     border-radius: 0px;
+     border: medium none;
+     margin: 0 2px;
+}
+
+input[type=image]:hover {
+     border: 1px outset #bbb;
+}
+
 input[type=text]:active, input[type=text]:hover, input.r:hover {
      background: #f60;
      color: #fff;
